tests/pass/ModAssign.java
package pass;

public class ModAssign {

	public int modAssign(int x, int y) {
		int t = x;
		t %= y;
		return t;
	}
	
	public double modAssignD(double x, double y) {
		double t = x;
		t %= y;
		return t;
	}
}
