tests/fail/ModAssign.java
package fail;

public class ModAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t %= "a";
	}	
}
